<resources>
    <string name="app_name">OctagramChat</string>
    <string name="developed_by_a_pookie">Developed by a pookie</string>
    <string name="begin_to_dive">begin to dive</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="mobile">mobile</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_sent">Enter OTP sent</string>
    <string name="otp">OTP</string>
    <string name="next">NEXT</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="enter_username">Enter UserName</string>
    <string name="username">username</string>
    <string name="let_me_in">Let me In</string>
    <string name="write_message_here">Write message here</string>
    <string name="search_user">Search User</string>
    <string name="hello">Hello</string>
    <string name="update_profile">Update profile</string>
    <string name="logout">Logout</string>
    <string name="phone">Phone</string>
    <string name="user_name">User name</string>
    <string name="_000000000000">+000000000000</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="developed_by_team_octagram">Developed by Team Octagram</string>
    <string name="welcome_to_octagram">Welcome to Octagram</string>
</resources>